Perbaiki response balance dan transaksi
