# docs/swagger.json
@@ -303,7 +303,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/response.APIResponse"
+                                "$ref": "#/definitions/response.TransactionListSwaggerResponse"
                             }
                         }
                     },
@@ -580,7 +580,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/response.APIResponse"
+                                "$ref": "#/definitions/response.TransactionListSwaggerResponse"
                             }
                         }
                     },
@@ -626,7 +626,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/response.APIResponse"
+                            "$ref": "#/definitions/response.TransactionListSwaggerResponse"
                         }
                     },
                     "400": {
@@ -671,7 +671,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.APIResponse"
+                            "$ref": "#/definitions/response.TransactionListSwaggerResponse"
                         }
                     },
                     "404": {
@@ -777,6 +777,39 @@
         }
     },
     "definitions": {
+        "dto.AccountDTO": {
+            "type": "object",
+            "properties": {
+                "ID": {
+                    "type": "integer"
+                },
+                "Name": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.CategoryDTO": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.UserDTO": {
+            "type": "object",
+            "properties": {
+                "ID": {
+                    "type": "integer"
+                },
+                "Name": {
+                    "type": "string"
+                }
+            }
+        },
         "request.AccountRequest": {
             "type": "object",
             "required": [
@@ -881,6 +914,67 @@
                 "meta": {},
                 "status": {
                     "type": "string"
+                }
+            }
+        },
+        "response.TransactionListSwaggerResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/response.TransactionResponse"
+                    }
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.TransactionResponse": {
+            "type": "object",
+            "properties": {
+                "Account": {
+                    "$ref": "#/definitions/dto.AccountDTO"
+                },
+                "AccountID": {
+                    "type": "integer"
+                },
+                "Amount": {
+                    "type": "number"
+                },
+                "Category": {
+                    "$ref": "#/definitions/dto.CategoryDTO"
+                },
+                "CategoryID": {
+                    "type": "integer"
+                },
+                "Date": {
+                    "type": "string"
+                },
+                "Descriptions": {
+                    "type": "string"
+                },
+                "ID": {
+                    "type": "integer"
+                },
+                "TargetAccount": {
+                    "$ref": "#/definitions/dto.AccountDTO"
+                },
+                "TargetAccountID": {
+                    "type": "integer"
+                },
+                "Type": {
+                    "type": "string"
+                },
+                "User": {
+                    "$ref": "#/definitions/dto.UserDTO"
+                },
+                "UserID": {
+                    "type": "integer"
                 }
             }
         }
