# internal/dto/response/account_response.go
@@ -1,7 +1,6 @@
 package response
 
 type AccountResponse struct {
-	Name         string `json:"name"`
-	Type         string `json:"type"`
-	Descriptions string `json:"descriptions"`
+	ID   uint   `json:"id"`
+	Name string `json:"name"`
 }
