# internal/dto/response/swagger_response.go
@@ -1,0 +1,7 @@
+package response
+
+type TransactionListSwaggerResponse struct {
+	Code    int                   `json:"code"`
+	Message string                `json:"message"`
+	Data    []TransactionResponse `json:"data"`
+}
